# GoodnessOfFitModel

./: CITATION.cff  README.md  demo_test.ipynb  gfit.py  matlab_gfit.m  pyproject.toml
src/met_gfit/: __init__.py  metrics.py
src/tests/: test.ipynb
