[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "met-gfit"  # name when install: pip install met-gfit
version = "1.1.3"
description = "Model Evaluation Toolkit (MET): A specialized suite for Goodness-of-Fit (gfit) analysis."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Rui Gao", email = "rui.ray.gao@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/RuiGao9/GoodnessOfFitModel/met-gfit"